data-sync-example-ingress/test-ingress1.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: vault-ingress
  namespace: test
spec:
  rules:
  - host: myvault.d2iq.com
    http:
      paths:
      - path: /
        backend:
          serviceName: vault
          servicePort: 8200
